<resources>
    <string name="app_name">Fitnessa</string>
    <string name="login">LOGIN</string>
    <string name="textview">TextView</string>
    <string name="bmi">BMI</string>
    <string name="volume">VOLUME</string>
    <string name="notes">NOTES</string>
    <string name="textview2">TextView</string>
    <string name="back">BACK</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="log_in">LOG IN</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight</string>
    <string name="underweight">UNDERWEIGHT</string>
    <string name="_18_5"><![CDATA[< 18.5]]></string>
    <string name="_18_5_24_9">18.5 – 24.9</string>
    <string name="height">Height</string>
    <string name="kg">(kg)</string>
    <string name="m">(m)</string>
    <string name="bmi2">BMI :</string>
    <string name="_25_0_29_9">25.0 – 29.9</string>
    <string name="_30_0"><![CDATA[> 30.0]]></string>
    <string name="obesity">OBESITY</string>
    <string name="overweight">OVERWEIGHT</string>
    <string name="healthy">HEALTHY</string>
    <string name="reset">Reset</string>
    <string name="calendar">CALENDAR</string>
    <string name="weight2">Weight</string>
    <string name="calendar2">CALENDAR</string>
    <string name="ca">ca</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="rep_x">(rep) x</string>
    <string name="lbs">(lbs) =</string>
    <string name="set_x">(set) x</string>
    <string name="v">v</string>
    <string name="lbs2">(lbs) =</string>
    <string name="rep_x2">(rep) x</string>
    <string name="set_x2">(set) x</string>
    <string name="lbs3">(lbs) =</string>
    <string name="set_x3">(set) x</string>
    <string name="v2">v</string>
    <string name="rep_x3">(rep) x</string>
    <string name="v3">v</string>
    <string name="volume2">VOLUME :</string>
    <string name="reset2">reset</string>
    <string name="reset3">RESET</string>
    <string name="calculate2">CALCULATE</string>
    <string name="save">SAVE</string>
</resources>