<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFB48C"
    tools:context=".BMIActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="550dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/weight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="SpeakableTextPresentCheck,LabelFor"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/weightUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/kg"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/heightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/height"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,LabelFor"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/heightUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/m"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#C7AA7F"
        android:text="@string/calculate"
        android:textColor="#424242"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="61dp"
        android:backgroundTint="#C7AA7F"
        android:text="@string/reset"
        android:textColor="#424242"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="372dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/bmiText"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/bmi2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/bmi"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <TableLayout
        android:layout_width="322dp"
        android:layout_height="115dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="169dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/_18_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/underweight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/_18_5_24_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/healthy"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/_25_0_29_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/overweight"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/_30_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/obesity"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>