<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFB48C"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/loginId"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loginPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/password"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-condensed-medium"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="367dp"
        android:backgroundTint="#C7AA7F"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4E342E"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="367dp"
        android:backgroundTint="#C7AA7F"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#4E342E"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/loginComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="298dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>